14331
Just a missing = gives a not really helpful error message - especially not suitable for beginners. The message directs not to the root of the problem.

See yourself:
{code}
scala> def foo():Int { 0 }
<console>:1: error: illegal start of declaration
       def foo():Int { 0 }
                       ^

scala> def foo():Int = { 0 }
foo: ()Int
{code}
